--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,13 @@
+body {
+  margin: 0;
+}
+
 canvas {
   border: none;
   position: absolute;
   border: 1px solid black;
+  width: 100%;
+  height: 100%;
 }
 
 .canvas-2d {
